[gd_scene load_steps=11 format=3 uid="uid://brugd7e0sivpl"]

[ext_resource type="Texture2D" uid="uid://ba4cs5ejw461u" path="res://scenes/towers/cannon/sprites/cannon-Sheet.png" id="1_3q6d5"]
[ext_resource type="Script" path="res://scenes/towers/cannon/cannon.gd" id="1_hpq2c"]
[ext_resource type="AudioStream" uid="uid://c7e5m818n8f0i" path="res://scenes/towers/cannon/cannon-fire.wav" id="2_5jv6a"]
[ext_resource type="Resource" uid="uid://dyec56hv0wvl6" path="res://scenes/towers/cannon/cannon_tower_info.tres" id="3_b8ctw"]
[ext_resource type="Script" path="res://scenes/towers/targeting_area.gd" id="4_cvdq4"]

[sub_resource type="Animation" id="Animation_sipot"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Flipper/CannonTopPivot/CannonTop:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = false
tracks/1/path = NodePath("AudioStreamPlayer2D:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_0w7ae"]
resource_name = "shoot"
length = 1.2
step = 0.0195
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Flipper/CannonTopPivot/CannonTop:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AudioStreamPlayer2D:playing")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.254902),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.235294),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"shoot"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_73v5g"]
_data = {
"RESET": SubResource("Animation_sipot"),
"shoot": SubResource("Animation_0w7ae")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rg7wc"]
size = Vector2(326, 206)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7dgut"]
size = Vector2(318, 208)

[node name="Canon" type="Node2D" node_paths=PackedStringArray("shoot_point", "targets_area")]
script = ExtResource("1_hpq2c")
shoot_point = NodePath("Flipper/CannonTopPivot/ShootPoint")
projectile_trajectory_type = "1"
targets_area = NodePath("TargetsArea")
tower_info_res = ExtResource("3_b8ctw")

[node name="Flipper" type="Marker2D" parent="."]

[node name="CannonTopPivot" type="Marker2D" parent="Flipper"]

[node name="ShootPoint" type="Marker2D" parent="Flipper/CannonTopPivot"]
position = Vector2(36, -15)

[node name="CannonTop" type="Sprite2D" parent="Flipper/CannonTopPivot"]
position = Vector2(15, -21.5)
texture = ExtResource("1_3q6d5")
hframes = 6
vframes = 2

[node name="CannonBase" type="Sprite2D" parent="Flipper"]
position = Vector2(15, -21.5)
texture = ExtResource("1_3q6d5")
hframes = 6
vframes = 2
frame = 6

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_73v5g")
}

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_5jv6a")
volume_db = -5.0
bus = &"SFX"

[node name="FireRateTimer" type="Timer" parent="."]

[node name="TargetsArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 32
script = ExtResource("4_cvdq4")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="TargetsArea"]
position = Vector2(227, 1)
shape = SubResource("RectangleShape2D_rg7wc")

[node name="CollisionShape2D3" type="CollisionShape2D" parent="TargetsArea"]
position = Vector2(-223, 0)
shape = SubResource("RectangleShape2D_7dgut")

[connection signal="timeout" from="FireRateTimer" to="." method="_on_fire_rate_timer_timeout"]
